# mfpulse_reimagined

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  qa_config.yaml
backend/: .coverage  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  cache_keys.py  config.py  database.py  exceptions.py  morningstar_config.py
backend/app/engines/: lens_engine.py  signal_engine.py  simulation_engine.py
backend/app/ingestion/: feed_parser.py  field_maps.py
backend/app/jobs/: scheduler.py
backend/app/repositories/: audit_repo.py  cache_repo.py  freshness_repo.py  fund_repo.py  holdings_repo.py  ingestion_repo.py  lens_repo.py  override_repo.py  strategy_repo.py
backend/scripts/: backfill_historical.py
backend/tests/: conftest.py  test_access_manager.py  test_audit_api.py  test_backfill.py  test_backfill_api.py  test_category_alignment.py  test_category_avg.py  test_claude_client.py  test_config.py  test_dashboard_archetypes.py  test_exceptions.py  test_feed_parser.py  test_fetch_api.py  test_field_maps.py  test_fund_repo.py  test_fund_service.py  test_funds_api.py  test_funds_lens_integration.py  test_health.py  test_holdings_backfill.py  test_holdings_repo.py  test_ingestion_api.py  test_ingestion_repo.py  test_ingestion_service.py  test_jobs_api.py  test_lens_api.py  test_lens_engine.py  test_lens_repo.py  test_lens_schemas.py  test_lens_service.py  test_marketpulse_client.py  test_models.py  test_morningstar_fetcher.py  test_nav_backfill_service.py  test_override_repo.py  test_override_service.py  test_overrides_api.py  test_portfolio_analytics.py  test_pr13_data_fixes.py  test_pr13_hardening.py  (+9 more)
(+329 files in other folders)
