[project]
name = "mf-pulse"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",                    # Quiet output
    "--tb=short",            # Short tracebacks
    "--strict-markers",      # Error on unknown markers
    "--cov=app",             # Coverage on app/ directory
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=35",   # Current baseline (raise as integration tests improve coverage)
]
markers = [
    "slow: marks tests that take >5s",
    "integration: marks tests that need a real DB connection",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # type-checking imports
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in default argument (FastAPI Depends pattern)
    "UP007",  # Use X | Y for union (keep Optional for clarity)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
ignore_missing_imports = true
check_untyped_defs = true
